# oscar-sandbox

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main_st09ordering.yml
test_shop/: asgi.py  settings.py  urls.py  wsgi.py
test_shop/templates/basket/partials/: basket_content.html
