[tool.poetry]
authors = ["Oleksandr Korol <oleksandr.korol@coaxsoft.com>"]
description = ""
name = "oscar-sandbox"
packages = [{include = "oscar_sandbox"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
django-oscar = {extras = ["sorl-thumbnail"], version = "^3.2"}
python = "^3.11"
django-oscar-paypal = {git = "https://github.com/django-oscar/django-oscar-paypal.git"}
pillow = "9.5.0"
django-oscar-api = "^3.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
black = "^23.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

# Ruff settings
[tool.ruff]
ignore = ["RUF005"]
line-length = 120
select = ["E", "F", "W", "I", "C4", "Q", "RUF", "PIE", "COM"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".hg",
  ".mypy_cache",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "migrations",
  "dist",
  "venv",
  ".venv",
  ".conf",
  ".data",
  ".env",
  "asgi.py",
]
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py38"
[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# Black settings

[tool.black]
line-length = 120
target-version = ['py310']

[tool.coverage.run]
branch = true
omit = [
  ".venv/*",
  "*/migrations/*",
  "*/admin.py",
  "*/apps.py",
  "manage.py",
  "*/settings.py",
  "*/asgi.py",
  "*/wsgi.py",
  "*/tests.py",
  "example/*",
  "shop/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
